made fha page private

--- a/fha.html
+++ b/fha.html
@@ -58,6 +58,9 @@
 			<p>	
 				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted preliminary research, including a heuristic evaluation and stakeholder interviews. Moving forward, we aim to thoroughly understand user goals and challenges so we can overhaul the site’s underlying information architecture.
 			</p>
+			<p>
+				As with government with many government engagements, I can't share too many public details - please <a href="mailto:emporat@gmail.com">contact me</a> to learn more about this project!
+			</p>
 		</div>
 
 		<div class="context-specifics">
@@ -71,7 +74,7 @@
 		</div>
 	</div>
 
-	<div class="divider"></div>
+<!-- 	<div class="divider"></div>
 
 	<div class="panel" id="summary">
 		<h2 class="body right">Branding Refresh</h2>
@@ -126,7 +129,7 @@
 				<p>Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main customer service vehicle.</p>
 
 				<h4>Analysis Process</h4>
-				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p>
+				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p> -->
 
 <!-- 				<h4>Key Findings</h4>
 				<ul>
@@ -138,7 +141,7 @@
 					<li>Define a clear, intuitive, and logical scope for FHA.gov vs. HUD.gov content. This is especially important for program offices that span across both organizations.</li>
 				</ul> -->
 
-
+<!-- 
 			</div>
 	</div>
 
@@ -158,7 +161,7 @@
 		</div>
 	</div>
 
-<div id="projects">
+<div id="projects"> -->
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
