--- a/fha.html
+++ b/fha.html
@@ -59,7 +59,7 @@
 				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted preliminary research, including a heuristic evaluation and stakeholder interviews. Moving forward, we aim to thoroughly understand user goals and challenges so we can overhaul the site’s underlying information architecture.
 			</p>
 			<p>
-				As with government with many government engagements, I can't share too many public details - please <a href="mailto:emporat@gmail.com">contact me</a> to learn more about this project!
+				As with many government engagements, I can't share too many public details - please <a href="mailto:emporat@gmail.com">contact me</a> to learn more about this project!
 			</p>
 		</div>
 
