--- a/index.html
+++ b/index.html
@@ -41,125 +41,28 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
+
 <div id="home">
-
 	<div id="intro">
-		<h3>Hey there. My name is</h3>
-		<h1 style="color: var(--orange)">Emily Porat</h1>
-		<div class="large-space"></div>
-
-		<h3>Congrats! You've found my portfolio of work as a</h3>
-		<h1 style="color: var(--purple)">UX Designer</h1>
-		<div class="large-space"></div>
-
+		<h4>UX Researcher & Designer</h4>
+		<h1 style="color: var(--purple)">Emily Porat</h1>
+		<div class="short-divider"></div>
+	
 		<h3>
-			Scroll on to learn a little more about me and check out my featured projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
+			I live in Washington DC and work at Deloitte Digital, primarily with federal government clients. My work has supported those seeking food secruity, affordable housing, emergency management, and more. 
 		</h3>
+		<p>	
+			During my time at Deloitte, I've contributed to and led half a dozen projects, ranging from 4-week usability evaluations to 9-month digital transformations. I also founded and lead a grassroots community for junior designers and contribute to several initiatives focused on the new-hire experience.
+		</p>
+		<p>
+			I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
+		</p>
 	</div>
 	<img src="pics/about/emily4.png" id="home-pic" alt="Headshot of Emily, smiling and looking to the right">
 </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-
-<div id="about">
-	 
-	<h1 style="color: var(--pink)">About</h1>
-	<div class="short-divider"></div>
-
-		<h3>I live in Washington, DC and work at Deloitte Digital, primarily with federal government clients.</h3>
-		<p>I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. Over the past year, I’ve learned some important lessons that have contributed to my design philosphy:</p>
-		<div class="space"></div>
-
-		<h4>Pragmatism wins</h4>
-		<p>
-			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. As designers, we have a responsibility to understand the user's needs and do all we can to give voice to those needs while balancing the constraints of the real world.
-		</p>
-
-		<div class="space"></div>
-
-		<h4>Design is a team sport</h4>
-		<p>
-			An integral part of any project is working with functional and technical teammates to assess level of effort, technical complexity, and overall feasibility of the designs. Because, at the end of the day, a pixel-perfect design is nothing without stakeholder buy-in and working code.
-		</p>
-
-		<div class="space"></div>
-
-		<h4>Wield power wisely</h4>
-		<p>
-			Every design decision I make - from who to interview during research to the button color on a UI - impacts the end user. It’s my responsibility to honor the perspectives of marginalized groups, check my biases at the door, and generally design in ways that are respectful, ethical and useful.
-		</p>		
-
-</div>
-
-
-<div id="projects">
-	<h1>Projects</h1>
-
-	<!-- Featured project -->
-	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)" alt="A screenshot of the FHA.gov home page">
-		<div class="project-info">
-			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: var(--pink)">FHA Website Redesign</h2>
-			<div class="short-divider"></div>
-			<h3>As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
-			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
-				<h4 style="color: black">Learn More</h4>
-			</button>
-		</div>
-	</div>
-
-	<div class="divider"></div>
-
-	<!-- Featured project -->
-	<div class="section">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
-		<div class="project-info" style="float: left; margin-left: 0">
-			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: var(--orange)">Food Management System</h2>
-			<div class="short-divider"></div>
-			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
-			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
-			</button>
-		</div>
-	</div>
-
-	<div class="divider"></div>
-
-	<!-- Featured project -->
-	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
-		<div class="project-info">
-			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
-			<div class="short-divider"></div>
-			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
-			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
-			</button>
-		</div>
-	</div>
-
-	<div class="divider"></div>
-
-	<!-- Featured project -->
-	<div href="rsvpd.html">
-	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green); float: right" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
-		<div class="project-info" style="float: left; margin-left: 0">
-			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: var(--green)">RSVP'd</h2>
-			<div class="short-divider"></div>
-			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
-			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
-			</button>
-		</div>
-	</div>
-	</div>
-</div>
 
 </meta>
 </body>
