--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--purple); height: 70vh; margin-top: 120px">
+      <div class="full-width" style="background-color: var(--purple); height: 85vh; margin-top: 120px">
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title">
             <div>
               <h1 style="color: black">About</h1>
-              <h2>I’m a designer & researcher with a breadth of experience across a variety of platforms and products.</h2>
+              <h2>I’m a researcher & designer with a breadth of experience across a variety of platforms and products.</h2>
             </div>
           </div>
         </div>
