--- a/index.html
+++ b/index.html
@@ -41,8 +41,20 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
+      <div class="full-width" style="background-color: var(--orange); height: 85vh; margin-top: 120px; margin-bottom: 0">
+        <div class="title-wrapper animate-reveal animate-first">
+          <div class="title">
+            <div>
+              <h1 style="color: black">Emily Porat</h1>
+              <h2>UX Researcher & Designer based in Washington DC. </h2>
+              <div class="short-divider"></div>
+              <h3 style="color: black">Currently at Deloitte Digital, where my work has supported gov programs for those seeking food secruity, affordable housing, emergency management, and more. I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a style="color: black" href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a style="color: black" href="mailto:emporat@gmail.com">email</a>. </h3>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div id="home">
+<!-- <div id="home">
 	<div id="intro">
 		<h4>UX Researcher & Designer</h4>
 		<h1 style="color: var(--purple)">Emily Porat</h1>
@@ -59,7 +71,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		</p>
 	</div>
 	<img src="pics/about/emily4.png" id="home-pic" alt="Headshot of Emily, smiling and looking to the right">
-</div>
+</div> -->
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
