updated typography and switched to light mode

--- a/about.html
+++ b/about.html
@@ -37,12 +37,13 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--purple); height: 85vh; margin-top: 120px">
+      <div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title">
             <div>
-              <h1 style="color: black">About</h1>
-              <h2>I’m a researcher & designer with a breadth of experience across a variety of platforms and products.</h2>
+              <h1 style="color: white">About</h1>
+              <div class="short-divider"></div>
+              <h3>I'm a researcher & designer with a breadth of experience across a variety of platforms and products.</h3>
             </div>
           </div>
         </div>
@@ -69,7 +70,7 @@
             <h3>Skills</h3>
             <div class="short-divider"></div>
             <p>Research is at the root of everything we do as designers. As such, my focus tends toward the earlier stages of the HCD process. While I enjoy working with high-fi visual design and component libraries, my sweet spot is from the beginning of research into strategy and initial design work. My superpower is translating raw data into actionable insights and solutions, and I can do that best when I'm most involved in the early and middle stages of a design project.</p>
-            <img class="pic-left" src="pics/about/skills.png">
+<!--             <img class="pic-left" src="pics/about/skills.png"> -->
 
             <div class="space"></div>
             
