--- a/fha.html
+++ b/fha.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 120px">
+	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -141,8 +141,8 @@
 					<li>Define a clear, intuitive, and logical scope for FHA.gov vs. HUD.gov content. This is especially important for program offices that span across both organizations.</li>
 				</ul> -->
 
-<!-- 
-			</div>
+
+<!-- 			</div>
 	</div>
 
 	<div class="full-width">
@@ -159,9 +159,9 @@
 
 			<p>More coming soon!</p>
 		</div>
-	</div>
+	</div> -->
 
-<div id="projects"> -->
+<div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -174,8 +174,8 @@
 			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
-			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
+			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
+				<h4>Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -190,8 +190,8 @@
 			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
-			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
+			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
+				<h4>Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -207,8 +207,8 @@
 			<h2 style="color: var(--green)">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
-			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
+			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
+				<h4>Learn More</h4>
 			</button>
 		</div>
 	</div>
