--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
-      <div class="full-width" style="background-color: var(--orange); height: 85vh; margin-top: 120px; margin-bottom: 0">
+      <div class="full-width" style="background-color: var(--mediumgray); height: 90vh; margin-top: 70px; margin-bottom: 0">
         <div class="title-wrapper animate-reveal animate-first">
-          <div class="title">
+          <div class="title" style="color: var(--white)">
             <div>
-              <h1 style="color: black">Emily Porat</h1>
-              <h2>UX Researcher & Designer based in Washington DC. </h2>
+              <h4 style="color: var(--lightpink)">UX Researcher & Designer // Washington DC. </h4>
+              <h1>Emily Porat</h1>
+              
               <div class="short-divider"></div>
-              <h3 style="color: black">Currently at Deloitte Digital, where my work has supported gov programs for those seeking food secruity, affordable housing, emergency management, and more. I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a style="color: black" href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a style="color: black" href="mailto:emporat@gmail.com">email</a>. </h3>
+              <h3>Currently at Deloitte Digital, where my work has supported gov programs for those seeking food secruity, affordable housing, emergency management, and more. I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. </h3>
             </div>
           </div>
         </div>
