--- a/projects.html
+++ b/projects.html
@@ -38,12 +38,13 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--green); height: 85vh; margin-top: 120px">
+      <div class="full-width" style="background-color: var(--green); height: 75vh; margin-top: 70px">
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title">
             <div>
-              <h1 style="color: black">Projects</h1>
-              <h2>From custom enterprise systems to public-facing dot gov rebrands, I’ve done a little bit of everything.</h2>
+              <h1 style="color: white">Projects</h1>
+              <div class="short-divider"></div>
+              <h3>From custom enterprise systems to public-facing dot gov rebrands, I’ve done a little bit of everything.</h3>
             </div>
           </div>
         </div>
@@ -55,48 +56,48 @@
     <img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)" alt="A screenshot of the FHA.gov home page">
     <div class="project-info">
       <h4>Summer 2020 • Deloitte Digital</h4>
-      <h2 style="color: var(--pink)">FHA Website Redesign</h2>
+      <h2>FHA Website Redesign</h2>
       <div class="short-divider"></div>
       <h3>As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
       <button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
-        <h4 style="color: black">Learn More</h4>
+        <h4>Learn More</h4>
       </button>
     </div>
   </div>
 
-  <div class="divider"></div>
+  <div class="divider" style="background-color: white"></div>
 
     <!-- Featured project -->
     <div class="section">
       <img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
       <div class="project-info" style="float: left; margin-left: 0">
         <h4>Fall 2019 • Deloitte Digital</h4>
-        <h2 style="color: var(--orange)">Food Management System</h2>
+        <h2>Food Management System</h2>
         <div class="short-divider"></div>
         <h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
-        <button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
-          <h4 style="color: black">Learn More</h4>
+        <button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
+          <h4>Learn More</h4>
         </button>
       </div>
     </div>
 
-    <div class="divider"></div>
+    <div class="divider" style="background-color: white"></div>
 
     <!-- Featured project -->
     <div class="section">
       <img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
       <div class="project-info">
         <h4>Summer 2018 • Deloitte Digital</h4>
-        <h2 style="color: var(--purple)">Learning & Development Portal</h2>
+        <h2>Learning & Development Portal</h2>
         <div class="short-divider"></div>
         <h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3> 
-        <button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
-          <h4 style="color: black">Learn More</h4>
+        <button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
+          <h4>Learn More</h4>
         </button>
       </div>
     </div>
 
-    <div class="divider"></div>
+    <div class="divider" style="background-color: white"></div>
 
     <!-- Featured project -->
     <div href="rsvpd.html">
@@ -104,11 +105,11 @@
       <img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green); float: right" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
       <div class="project-info" style="float: left; margin-left: 0">
         <h4>Fall 2018 • Carnegie Mellon University</h4>
-        <h2 style="color: var(--green)">RSVP'd</h2>
+        <h2 >RSVP'd</h2>
         <div class="short-divider"></div>
         <h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
-        <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
-          <h4 style="color: black">Learn More</h4>
+        <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
+          <h4>Learn More</h4>
         </button>
       </div>
     </div>
