--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,8 @@
   
   <div id="container">
     <div class="contact-text" style="margin: 0">
-      <h2 style="color: var(--orange)">Emily Porat</h2> 
-      <h2 style="color: var(--purple)">UX Designer</h2>
+      <h2 style="color: var(--pink)">Emily Porat</h2> 
+      <h2 style="color: white">UX Designer</h2>
     </div>
 
     <div id="footer-links">
