--- a/l&d.html
+++ b/l&d.html
@@ -36,7 +36,7 @@
     <div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-		<div class="full-width" style="background-color: var(--purple); height: 70vh; margin-top: 120px">
+		<div class="full-width" style="background-color: var(--purple); height: 70vh; margin-top: 70px">
 		  	<div class="title-wrapper animate-reveal animate-first">
 	            <div class="title">
 	                <div>
@@ -322,7 +322,7 @@
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
-				<h4 style="color: black">Learn More</h4>
+				<h4>Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -336,8 +336,8 @@
 			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
-			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
+			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
+				<h4>Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -353,8 +353,8 @@
 			<h2 style="color: var(--green)">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
-			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
-				<h4 style="color: black">Learn More</h4>
+			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
+				<h4>Learn More</h4>
 			</button>
 		</div>
 	</div>
