--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title" style="color: var(--white)">
             <div>
-              <h4 style="color: var(--lightpink)">UX Researcher & Designer // Washington DC. </h4>
+              <h4 style="color: var(--lightpink)">UX Researcher & Designer // Washington DC </h4>
               <h1>Emily Porat</h1>
               
               <div class="short-divider"></div>
