--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
 
     <div id="footer-links">
       <div class="contact-text">
-        <h3>Projects</h3>
+        <h3 style="color: white">Projects</h3>
           <p><a href="fha.html">FHA Website Redesign</a></p>
           <p><a href="fms-pos.html">Food Management System</a></p>
           <p><a href="rsvpd.html">RSVP'd</a></p>
@@ -16,7 +16,7 @@
       </div>
        
       <div class="contact-text">
-        <h3>Contact</h3>
+        <h3 style="color: white">Contact</h3>
           <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
           <p style="color: white">(650) 996 - 8836</p>
           <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
