updated copy for POS

--- a/l&d.html
+++ b/l&d.html
@@ -335,7 +335,7 @@
 			<h4>Fall 2019 • Deloitte Digital</h4>
 			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
-			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
+			<h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
 				<h4>Learn More</h4>
 			</button>
