--- a/fms-pos.html
+++ b/fms-pos.html
@@ -56,7 +56,7 @@
 			<h3>
 			<div class="short-divider"></div>
 			<p>	
-				My team was tasked with replacing a federal aid program's legacy inventory management system with a Salesforce web application and an accompanying iOS mobile iPad app. The system is scheduled to launch Summer 2020.
+				My team was tasked with replacing a federal aid program's legacy inventory management system with a Salesforce web application and an accompanying iOS mobile iPad app. 
 			</p>
 			<p>
 				Sophisticated applications can be built quickly by using the wide range of 'out of the box' Salesforce components. However, this particular system has many complex requirements, and custom-designed interfaces were required in three major areas: customer data management, inventory management, and the point of sale (POS) checkout system.
