added password modal

--- a/fha.html
+++ b/fha.html
@@ -171,7 +171,7 @@
 		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange)">
 		<div class="project-info">
 			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: var(--orange)">Food Management System</h2>
+			<h2>Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
@@ -187,7 +187,7 @@
 		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
+			<h2>Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
 			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
@@ -204,7 +204,7 @@
 		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
 		<div class="project-info">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: var(--green)">RSVP'd</h2>
+			<h2>RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
