--- a/fms-pos.html
+++ b/fms-pos.html
@@ -563,7 +563,7 @@
 			
 			<div class="space"></div>
 				
-            <div style="padding: 5%; background-color: var(--darkgray)">
+            <div style="padding: 5%; background-color: var(--lightpink)">
                 <h4>Testimonials</h4>		
                 <div class="last"><div class="short-divider"></div></div>
                 <p>"[Team Member] and I have frequently shared notes about how impressed we were by what you learned in a short time. I remember that meeting where you walked us through your wireframes for [feature] in mid-January. We were both impressed by your rationale for various UX choices. You have really developed a valuable skill blending the UI/UX craft with the Salesforce and iOS platforms." - Senior Manager, Deloitte Digital</p>
@@ -585,7 +585,7 @@
 		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: var(--pink)">FHA Branding Refresh</h2>
+			<h2>FHA Branding Refresh</h2>
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -601,7 +601,7 @@
 		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
+			<h2>Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
 			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
@@ -618,7 +618,7 @@
 		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
 		<div class="project-info">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: var(--green)">RSVP'd</h2>
+			<h2>RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
