--- a/l&d.html
+++ b/l&d.html
@@ -318,7 +318,7 @@
 		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: var(--pink)">FHA Branding Refresh</h2>
+			<h2>FHA Branding Refresh</h2>
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -333,7 +333,7 @@
 		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: var(--orange)">Food Management System</h2>
+			<h2>Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
@@ -350,7 +350,7 @@
 		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
 		<div class="project-info">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: var(--green)">RSVP'd</h2>
+			<h2>RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
