--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -51,6 +52,7 @@
       </div>
 <div id="projects">
 
+
   <!-- Featured project -->
   <div class="section" style="margin-top: 5%">
     <img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)" alt="A screenshot of the FHA.gov home page">
@@ -59,13 +61,13 @@
       <h2>FHA Website Redesign</h2>
       <div class="short-divider"></div>
       <h3>As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
-      <button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
+      <button id="myBtn" onclick="passProtect('fha.html')" value="Go to FHA Branding Refresh project page">
         <h4>Learn More</h4>
       </button>
     </div>
   </div>
 
-  <div class="divider" style="background-color: white"></div>
+  <div class="divider"></div>
 
     <!-- Featured project -->
     <div class="section">
@@ -75,13 +77,13 @@
         <h2>Food Management System</h2>
         <div class="short-divider"></div>
         <h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
-        <button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
+        <button id="myBtn" onclick="passProtect('fms-pos.html')" value="Go to Food Management System project page">
           <h4>Learn More</h4>
         </button>
       </div>
     </div>
 
-    <div class="divider" style="background-color: white"></div>
+    <div class="divider"></div>
 
     <!-- Featured project -->
     <div class="section">
@@ -97,7 +99,7 @@
       </div>
     </div>
 
-    <div class="divider" style="background-color: white"></div>
+    <div class="divider"></div>
 
     <!-- Featured project -->
     <div href="rsvpd.html">
