added back fha content

--- a/fha.html
+++ b/fha.html
@@ -74,7 +74,7 @@
 		</div>
 	</div>
 
-<!-- 	<div class="divider"></div>
+	<div class="divider"></div>
 
 	<div class="panel" id="summary">
 		<h2 class="body right">Branding Refresh</h2>
@@ -129,9 +129,9 @@
 				<p>Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main customer service vehicle.</p>
 
 				<h4>Analysis Process</h4>
-				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p> -->
+				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p>
 
-<!-- 				<h4>Key Findings</h4>
+				<h4>Key Findings</h4>
 				<ul>
 					<li>Organize around user needs, not HUD's org chart (current state).</li>
 					<li>Provide an easier way to access information that is currently buried in long PDF handbooks or spread out across various sections of the site.</li>
@@ -139,10 +139,10 @@
 					<li>Continue to make housing and healthcare accessible to vulnerable populations by creating a friendlier web presence for consumers. While FHA stakeholders view their business partners as their primary audience across the board, they all spoke about supporting low-income and first-time homebuyers as their core mission.</li>
 					<li>To build trust in the FHA brand, create a cohesive experience within program offices by applying consistent visual identity, content standards, and layouts. To facilitate stakeholder interactions, follow industry standards observed across competitor sites by using consistent processes, terminology, and organization patterns.</li>
 					<li>Define a clear, intuitive, and logical scope for FHA.gov vs. HUD.gov content. This is especially important for program offices that span across both organizations.</li>
-				</ul> -->
+				</ul>
 
 
-<!-- 			</div>
+			</div>
 	</div>
 
 	<div class="full-width">
@@ -159,7 +159,7 @@
 
 			<p>More coming soon!</p>
 		</div>
-	</div> -->
+	</div>
 
 <div id="projects">
 
