removed featured projects sections

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -575,12 +575,11 @@
 		</div>
 	</div>
 
-<div id="projects">
+<!-- <div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
 	
-	<!-- Featured project -->
 	<div class="section" style="margin-top: 5%">
 		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
@@ -596,7 +595,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div class="section">
 		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
@@ -612,7 +610,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
 		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
@@ -627,7 +624,7 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div> -->
 
 	</div>
 	<div id="footer"></div>
