--- a/l&d.html
+++ b/l&d.html
@@ -311,7 +311,7 @@
 
 
 
-<div id="projects">
+<!-- <div id="projects">
 	<div class="divider"></div>
 	<h1>More Projects</h1>
 	<div class="section" style="margin-top: 5%">
@@ -328,7 +328,7 @@
 	</div>
 
 	<div class="divider"></div>
-	<!-- Featured project -->
+
 	<div class="section">
 		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
@@ -344,7 +344,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
 		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
@@ -359,7 +358,7 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div> -->
 
   	<div id="footer"></div>
   	</meta>
