--- a/rsvpd.html
+++ b/rsvpd.html
@@ -273,7 +273,7 @@
 	  		</div>	
 	</div>
       
-<div id="projects">
+<!-- <div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -293,7 +293,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div class="section">
 		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
@@ -309,7 +308,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div class="section">
 		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)">
 		<div class="project-info">
@@ -323,7 +321,7 @@
 		</div>
 	</div>
 
-</div>
+</div> -->
 	  	
   	<div id="footer"></div>
   	</meta>
