--- a/fha.html
+++ b/fha.html
@@ -158,12 +158,11 @@
 		</div>
 	</div>
 
-<div id="projects">
+<!-- <div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
-	
-	<!-- Featured project -->
+
 	<div class="section" style="margin-top: 5%">
 		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange)">
 		<div class="project-info">
@@ -179,7 +178,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div class="section">
 		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
@@ -195,7 +193,6 @@
 
 	<div class="divider"></div>
 
-	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
 		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
@@ -210,7 +207,7 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div> -->
 	  	
   	<div id="footer"></div>
   	</meta>
