updated password so it's on-screen rather than a modal

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
               <h1>Emily Porat</h1>
               
               <div class="short-divider"></div>
-              <h3>Currently at Deloitte Digital, where my work has supported gov programs for those seeking food secruity, affordable housing, emergency management, and more. I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. </h3>
+              <h3>Currently at Deloitte Digital, where my work has supported gov programs for those seeking food secruity, affordable housing, emergency management, and more. I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com" target="_blank">email</a>. </h3>
             </div>
           </div>
         </div>
