--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,8 @@
       <h2>FHA Website Redesign</h2>
       <div class="short-divider"></div>
       <h3>As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
-      <button id="myBtn" onclick="passProtect('fha.html')" value="Go to FHA Branding Refresh project page">
-        <h4>Learn More</h4>
+      <button id="myBtn" onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
+        <h4><i class="fas fa-lock"></i> Learn More</h4>
       </button>
     </div>
   </div>
@@ -77,8 +77,8 @@
         <h2>Food Management System</h2>
         <div class="short-divider"></div>
         <h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
-        <button id="myBtn" onclick="passProtect('fms-pos.html')" value="Go to Food Management System project page">
-          <h4>Learn More</h4>
+        <button id="myBtn" onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
+          <h4><i class="fas fa-lock"></i> Learn More</h4>
         </button>
       </div>
     </div>
