--- a/fha.html
+++ b/fha.html
@@ -35,6 +35,15 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
+	<div id="modal_background">
+		<div id="prompt" class="pw_prompt">
+			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
+			<label>Password:</label>
+			<input id="pw_prompt_input1" type="password"></input>
+			<button onclick="checkPassword()">Submit</button>
+		</div>
+	</div>
+
 	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
