added back more projects and page titles to password prompt

--- a/fha.html
+++ b/fha.html
@@ -37,6 +37,7 @@
 
 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
+			<h3>FHA.gov Redesign</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
@@ -167,7 +168,7 @@
 		</div>
 	</div>
 
-<!-- <div id="projects">
+<div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -180,7 +181,7 @@
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
-				<h4>Learn More</h4>
+				<h4><i class="fas fa-lock"></i> Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -216,7 +217,7 @@
 		</div>
 	</div>
 	</div>
-</div> -->
+</div>
 	  	
   	<div id="footer"></div>
   	</meta>
