--- a/fms-pos.html
+++ b/fms-pos.html
@@ -37,6 +37,7 @@
 
 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
+			<h3>Food Management System</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
@@ -585,7 +586,7 @@
 		</div>
 	</div>
 
-<!-- <div id="projects">
+<div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -598,7 +599,7 @@
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
-				<h4>Learn More</h4>
+				<h4><i class="fas fa-lock"></i> Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -634,7 +635,7 @@
 		</div>
 	</div>
 	</div>
-</div> -->
+</div>
 
 	</div>
 	<div id="footer"></div>
