--- a/rsvpd.html
+++ b/rsvpd.html
@@ -273,7 +273,7 @@
 	  		</div>	
 	</div>
       
-<!-- <div id="projects">
+<div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -286,7 +286,7 @@
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
-				<h4>Learn More</h4>
+				<h4><i class="fas fa-lock"></i> Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -301,7 +301,7 @@
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
-				<h4>Learn More</h4>
+				<h4><i class="fas fa-lock"></i> Learn More</h4>
 			</button>
 		</div>
 	</div>
@@ -321,7 +321,7 @@
 		</div>
 	</div>
 
-</div> -->
+</div>
 	  	
   	<div id="footer"></div>
   	</meta>
