--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
         <h3 style="color: white">Contact</h3>
           <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
           <p style="color: white">(650) 996 - 8836</p>
-          <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
+          <p style="color: white"><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
       </div>
   </div>
   </div>
