updated FHA page and home

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             
             <h3>Skills</h3>
             <div class="short-divider"></div>
-            <p>Research is at the root of everything we do as designers. As such, my focus tends toward the earlier stages of the HCD process. While I enjoy working with high-fi visual design and component libraries, my sweet spot is from the beginning of research into strategy and initial design work. My superpower is translating raw data into actionable insights and solutions, and I can do that best when I'm most involved in the early and middle stages of a design project.</p>
+            <p>Research is at the root of everything we do as designers. As such, my focus tends toward the earlier stages of the HCD process. While I enjoy working with high-fi visual design and component libraries, my sweet spot is from the beginning of research into strategy and initial design work. My strength is translating raw data into actionable insights and solutions, and I can do that best when I'm most involved in the early and middle stages of a design project.</p>
 <!--             <img class="pic-left" src="pics/about/skills.png"> -->
 
             <div class="space"></div>
@@ -79,7 +79,7 @@
               <p>I'm originally from Mountain View, California, where I grew up beliving it was normal for houses to cost $2M and for Google to be in your backyard. My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't journalism (my other passion in high school).</p>
               <p>After high school, I decided to leave sunny CA and move across the country to Pittsburgh, PA to attend Carnegie Mellon University. During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to shift my focus towards UX.</p>
               <p>These days, I like to lift weights, bake sourdough bread, and hang out with my two cats.</p>
-              <img class="pic-left" src="pics/about/cats-bread.png">
+<!--               <img class="pic-left" src="pics/about/cats-bread.png"> -->
                <div class="space"></div>
               </div>
             </div>
