--- a/fha.html
+++ b/fha.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div id="modal_background">
+<!-- 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 			<h3>FHA Website Redesign</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
@@ -43,7 +43,7 @@
 			<input id="pw_prompt_input1" type="password"></input>
 			<button onclick="checkPassword()">Submit</button>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
 		<div class="title-wrapper animate-reveal animate-first">
@@ -62,11 +62,11 @@
 		<div class="context-summary">
 			<h2>Context</h2>
 			<h3>
-				As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.
+				I co-led the redesign and launch of fha.gov, the Federal Housing Administration’s consumer-facing site, which serves over 8 million single family homeowners. 
 			<h3>
 			<div class="short-divider"></div>
 			<p>	
-				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted preliminary research, including a heuristic evaluation and stakeholder interviews. Moving forward, we aim to thoroughly understand user goals and challenges so we can overhaul the site’s underlying information architecture.
+				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site for FHA-specific business. We began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-debth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
 			</p>
 		</div>
 
@@ -76,7 +76,7 @@
 			<h4>Team</h4>
 			<div class="context-description"><p>I co-lead research & design for a team of 12.</p></div>
 			<h4>Skills</h4> 
-			<div class="context-description"><p>Visual Design, User Research & Analysis</p></div>
+			<div class="context-description"><p>Heuristic Evaluation, User Interview, Usability Testing, Affinity Mapping, Wireframing, Prototyping, Style & Brand Development</p></div>
 			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, Excel</p></div>
 		</div>
 	</div>
@@ -86,7 +86,7 @@
 	<div class="panel" id="summary">
 		<h2 class="body right">Branding Refresh</h2>
 			<div class="body right">
-				<p>Before the long-term engagement began, step one was launching FHA.gov as a standalone site from its parent agency's site, HUD.gov. At that time, all FHA content was housed within various sections of HUD.gov. When it came to branding and style for the new FHA.gov, we had a couple of options. Another Deloitte team had already conducted a branding workshop and developed mood boards and social media guidance for FHA Catalyst, one of FHA's ongoing technology modernization initiatives, so I developed two style guides(see below): one with the original HUD branding, refreshed, and one with the FHA Catalyst branding, adapted from existing mood boards.</p>
+				<p>Before the long-term engagement began, step one was launching FHA.gov as a standalone site from its parent agency's site, HUD.gov. At that time, all FHA content was housed within various sections of HUD.gov. When it came to branding and style for the new FHA.gov, we had a couple of options. Another Deloitte team had already conducted a branding workshop and developed mood boards and social media guidance for FHA Catalyst, one of FHA's ongoing technology modernization initiatives, so I developed two style guides (see below): one with the original HUD branding, refreshed, and one with the FHA Catalyst branding, adapted from existing mood boards.</p>
 
 				<p>The client decided to move forward with the Catalyst branding. Given that this soft launch was meant to be a quick and light lift, we strategically selected a few key screens to redesign with the new branding, and carried over the underlying IA from the Housing portion of the HUD.gov site.</p>
 			</div>
@@ -99,15 +99,16 @@
 	</div>
 
 	<div class="panel" id="summary">
+		<h2 class="body right">1.0 Launch</h2>
 			<div class="body right">
-				<p>We launched <a href="http://FHA.gov">FHA.gov</a> on June 1, 2020, with a redesigned landing page, About page, Catalyst page, and COVID information page. All design decisions were based on assumptions and client priorities. For example, while FHA's primary customer is mortgage <i>lenders</i>, the client wanted to focus the new site on the <i>consumer</i> audience: homeowners and homebuyers.</p>
+				<p>We launched <a target="_blank" href="http://FHA.gov">FHA.gov</a> on June 1, 2020, with a redesigned landing page, About page, Catalyst page, and COVID information page. All design decisions were based on assumptions and client priorities. For example, while FHA's primary customer is mortgage <i>lenders</i>, the client wanted to focus the new site on the <i>consumer</i> audience: homeowners and homebuyers.</p>
 				<p>Regardless of these constraints, I was still able to drastically improve the page-level architecture to make information more accessible and easy to comprehend. For example, I envisioned the COVID Resources page (below) as a template for future content pages. To optimize for readability and clarity, I applied:</p>
 				<ul>
 					<li>Clear and consistent use of headers and subheaders to facilitate content chunking.</li>
 					<li>Highlight boxes to make key information easier to pick out, catering to the human tendency to scan rather than read.</li>
 					<li>An interactive table of contents to provide an overview and easy page navigation so users can jump right to relevant topics.</li>
 				</ul>
-				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov." style="background-color: white">
+				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov." style="background-color: white; box-shadow: 0px 0px 5px 5px rgba(100,100,100,0.1);">
 			</div>
 	</div>
 
@@ -123,21 +124,21 @@
 					<li>User Interviews – semi-structured conversations to understand user needs and preferences, pain points, and usability issues</li>
 				</ul> 
 				<h3>Heuristic Evaluation</h3>
-				<div class="short-divider"></div>
-				<p>Pages were selected for evaluation based on browsing data from March 1 – May 12, 2020. We chose to look at the top 11 viewed FHA-related pages on HUD.gov. We used the <a href="https://uitraps.com/">Tenets & Traps</a> framework to call out problem areas. Here are two key takeaways:
+				<p>Pages were selected for evaluation based on browsing data from March 1 – May 12, 2020. We chose to look at the top 11 viewed FHA-related pages on HUD.gov. We used the <a target="_blank" href="https://uitraps.com/">Tenets & Traps</a> framework to call out problem areas. Here are two key takeaways:
 				<ul>
 					<li>Information overload or information "under-load" - most pages are used as link farms, while other pages only have a few sentences of text.</li>
 					<li>Consistent inconsistency - type, color, and UI elements are not used consistently (see below for some examples).</li>
 				</ul> 
 				</p>
-				<img src="pics/FHA/HUD-UI.png" class="pic-right" style="background-color: white; width: 70%">
+				<img src="pics/FHA/HUD-UI.png" class="pic-right" style="background-color: white; width: 70%; box-shadow: 0px 0px 5px 5px rgba(100,100,100,0.1);">
 				<h3>Stakeholder Interviews</h3>
-				<div class="short-divider"></div>
 				<p>Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main customer service vehicle.</p>
 
+				<div class="space"></div>
 				<h4>Analysis Process</h4>
 				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p>
 
+				<div class="space"></div>
 				<h4>Key Findings</h4>
 				<ul>
 					<li>Organize around user needs, not HUD's org chart (current state).</li>
@@ -161,12 +162,42 @@
 	<div class="panel" id="user interviews">
 		<div class="body right">
 			<h3>User Interviews</h3>
-			<div class="short-divider"></div>
-			<p>Next on the docket is user interviews. FHA users vary significantly across several dimensions, including their relationship with FHA (business stakeholders vs. consumers), experience with the various mortgage processes, system understanding, and technology comfort. We plan to conduct one-on-one interviews with a maximum variation sample of a variety of user groups, including consumers and business stakeholders across the Single Family, Multifamily, and Healthcare programs.</p>
-
-			<p>More coming soon!</p>
+			<p>We conducted 23 one-on-one ethnographic interviews to assess participants’ cognitive, behavioral, and emotional approach to performing tasks with a focus on their interaction with the HUD and FHA websites.</p>
+			<p>Because FHA serves such a broad array of users, we interviewed participants from a variety of user groups, including consumers and business stakeholders across the Single Family, Multifamily, and Healthcare programs. 
+			</p>
+			<p>We didn't have time to go through the typical modeling exercises after Affinity Diagramming, so I pulled together user group 'profiles.'</p>
 		</div>
 	</div>
+
+	<div class="full-width">
+		<div class="panel medium">
+			<img class="pic-left" src="pics/FHA/interview-insights.png">
+		</div>
+	</div>
+
+	<div class="panel" id="user interviews">
+		<div class="body right">
+			<h3>Translating Research Insights to Requirements</h3>
+			<p>
+			We pulled out sentiment statements for each user group, came up with broad solutions for each one, and marked select ideas as 'high priority.' This process was inherently bottom up and data-backed. We started with the raw quotes, grouped through affinity diagramming, and presented the groupings and solutions with the strongest supporting evidence.
+			</p>
+			<img src="pics/FHA/user-stories.png" class="pic-right">
+			<p>
+			These statements would become rough blueprints for future user stories. They guided all future design work.
+			</p>
+		</div>
+	</div>
+
+<!-- 	<div class="divider"></div>
+
+	<div class="panel" id="IA">
+		<div class="body right">
+			<h2>Information Architecture</h2>
+			<p>
+			At last, it was time to turn our insights and ideas into actual designs. 
+			</p>
+		</div>
+	</div> -->
 
 <div id="projects">
 
