--- a/index.html
+++ b/index.html
@@ -49,30 +49,42 @@ $('#footer').load('http://emilyporat.com/footer.html');
               <h1>Emily Porat</h1>
               
               <div style="background-color: var(--pink)" class="short-divider"></div>
-              <h3>Currently at Deloitte Digital, where my work has supported gov programs for those seeking food secruity, affordable housing, emergency management, and more. I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com" target="_blank">email</a>. </h3>
+              <h3>I'm a pragmatist who knows how to work within constraints and through complexity to get the job done, well. I'm currently at Deloitte Digital, where my work has supported gov programs for those seeking food security, affordable housing, emergency management, and more.</h3>
+              <button class="secondary-btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Get in touch</button>
             </div>
           </div>
         </div>
       </div>
 
-<!-- <div id="home">
-	<div id="intro">
-		<h4>UX Researcher & Designer</h4>
-		<h1 style="color: var(--purple)">Emily Porat</h1>
-		<div class="short-divider"></div>
-	
-		<h3>
-			I live in Washington DC and work at Deloitte Digital, primarily with federal government clients. My work has supported those seeking food secruity, affordable housing, emergency management, and more. 
-		</h3>
-		<p>	
-			During my time at Deloitte, I've contributed to and led half a dozen projects, ranging from 4-week usability evaluations to 9-month digital transformations. I also founded and lead a grassroots community for junior designers and contribute to several initiatives focused on the new-hire experience.
-		</p>
-		<p>
-			I'm not looking for a new job at the moment, but if you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
-		</p>
+	<div class="panel" id="summary">
+		<div class="space"></div>
+		<h2 class="body right">So, Why Emily?</h2>
+			<div class="space"></div>
+			<div class="body right">
+				<h3>What I'm All About</h3>
+				<p>🧪 I prioritize utility, inclusivity, and usability (in that order). My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapon when it comes to organizing and synthesizing complexity - which is what I do best. </p>
+				<p>💬 While I consider myself a generalist, I shine most in the early stages of design because I firmly believe that (just enough) research is essential to getting a product right. There is nothing more satisfying to me than a neatly packaged deck that breaks down thousands of research findings into just a few slides.</p>
+				<p>🏅 I have really high standards for myself - I'm not physically capable of half-assing something. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
+
+				<div class="space"></div>
+				<h3>What I'm Not All About</h3>
+				<p>🙅‍♀️ I'm not a pixel-pusher, a professional rectangle-drawer, or a unicorn/ninja/superhero. I care about nailing down the "why" before the "how," and I'm not afraid to stand up for what I believe in.</p>
+
+				<div class="space"></div>
+				<h3>How I Got Here</h3>
+				<p>📚 My formal education at Carnegie Mellon was in Information Systems and Human-Computer Interaction, but I didn't stop learning when I graduated. Reading books from folks like <a target="_blank" href="https://www.ruinedby.design/">Mike Monteiro</a>, <a target="_blank" href="http://www.nointerface.com/book/">Golden Krishna</a>, and <a target="_blank" href="https://us.sagepub.com/en-us/nam/qualitative-research-evaluation-methods/book232962">Michael Patton</a> (just to name a few) have helped me fill in the gaps and transition my career from case study to reality. They've influenced me to question my assumptions, ask 'why' more, and practice my craft with rigor.</p>
+			</div>
 	</div>
-	<img src="pics/about/emily4.png" id="home-pic" alt="Headshot of Emily, smiling and looking to the right">
-</div> -->
+
+	<div class="full-width" style="margin-bottom: 0">
+		<div class="panel dark" style="background-color: var(--pink); text-align: center; padding-top: 10%; padding-bottom: 10%;">
+			
+				<h2>One more time for the people in the back</h2>
+				<h3>Want to get to know me? Hire me? Discuss our favorite Gilmore Girls episodes?</h3>
+				<button class="secondary-btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Get in touch</button>
+
+		</div>
+	</div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
