added back password to FHA

--- a/fha.html
+++ b/fha.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-<!-- 	<div id="modal_background">
+	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 			<h3>FHA Website Redesign</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
@@ -43,7 +43,7 @@
 			<input id="pw_prompt_input1" type="password"></input>
 			<button onclick="checkPassword()">Submit</button>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
 		<div class="title-wrapper animate-reveal animate-first">
